@@ -109,3 +109,16 @@ export const loginUser = async (req, res) => {
     });
   }
 };
+
+export const logoutUser = (req, res) => {
+  res.clearCookie("token", {
+    httpOnly: true,
+    secure: process.env.NODE_ENV === "production",
+    sameSite: "Strict",
+  });
+  
+  res.status(200).json({
+    success: true,
+    message: "Logged out successfully",
+  });
+};
